feat: 增加管理中心

--- a/weibo-lite/index.user.css
+++ b/weibo-lite/index.user.css
@@ -212,7 +212,11 @@
   .s-btn-a,
   .s-btn-b,
   .s-btn-c,
-  .m-gotop {
+  .m-gotop,
+  .card.authority .btn,
+  .pay-charts-tip .hd .btn,
+  .chart-group .chart.pay-chart .pay-chart-btn span,
+  .micro-analysis .search-wrapper span {
     position: relative;
     border-color: var(--c-accent) !important;
     background-color: var(--c-accent) !important;
@@ -232,6 +236,10 @@
   .s-btn-b span,
   .s-btn-c span,
   .m-gotop span,
+  .card.authority .btn span,
+  .pay-charts-tip .hd .btn span,
+  .chart-group .chart.pay-chart .pay-chart-btn span span,
+  .micro-analysis .search-wrapper span span,
   .W_gotop em,
   .W_btn_a em,
   .W_btn_c em,
@@ -242,6 +250,10 @@
   .s-btn-b em,
   .s-btn-c em,
   .m-gotop em,
+  .card.authority .btn em,
+  .pay-charts-tip .hd .btn em,
+  .chart-group .chart.pay-chart .pay-chart-btn span em,
+  .micro-analysis .search-wrapper span em,
   .W_gotop i,
   .W_btn_a i,
   .W_btn_c i,
@@ -251,7 +263,11 @@
   .s-btn-a i,
   .s-btn-b i,
   .s-btn-c i,
-  .m-gotop i {
+  .m-gotop i,
+  .card.authority .btn i,
+  .pay-charts-tip .hd .btn i,
+  .chart-group .chart.pay-chart .pay-chart-btn span i,
+  .micro-analysis .search-wrapper span i {
     color: var(--c-white) !important;
   }
   .W_gotop::after,
@@ -263,7 +279,11 @@
   .s-btn-a::after,
   .s-btn-b::after,
   .s-btn-c::after,
-  .m-gotop::after {
+  .m-gotop::after,
+  .card.authority .btn::after,
+  .pay-charts-tip .hd .btn::after,
+  .chart-group .chart.pay-chart .pay-chart-btn span::after,
+  .micro-analysis .search-wrapper span::after {
     content: '';
     display: block;
     position: absolute;
@@ -284,7 +304,11 @@
   .s-btn-a:hover,
   .s-btn-b:hover,
   .s-btn-c:hover,
-  .m-gotop:hover {
+  .m-gotop:hover,
+  .card.authority .btn:hover,
+  .pay-charts-tip .hd .btn:hover,
+  .chart-group .chart.pay-chart .pay-chart-btn span:hover,
+  .micro-analysis .search-wrapper span:hover {
     color: var(--c-white) !important;
   }
   .W_gotop:hover span,
@@ -297,6 +321,10 @@
   .s-btn-b:hover span,
   .s-btn-c:hover span,
   .m-gotop:hover span,
+  .card.authority .btn:hover span,
+  .pay-charts-tip .hd .btn:hover span,
+  .chart-group .chart.pay-chart .pay-chart-btn span:hover span,
+  .micro-analysis .search-wrapper span:hover span,
   .W_gotop:hover em,
   .W_btn_a:hover em,
   .W_btn_c:hover em,
@@ -307,6 +335,10 @@
   .s-btn-b:hover em,
   .s-btn-c:hover em,
   .m-gotop:hover em,
+  .card.authority .btn:hover em,
+  .pay-charts-tip .hd .btn:hover em,
+  .chart-group .chart.pay-chart .pay-chart-btn span:hover em,
+  .micro-analysis .search-wrapper span:hover em,
   .W_gotop:hover i,
   .W_btn_a:hover i,
   .W_btn_c:hover i,
@@ -316,7 +348,11 @@
   .s-btn-a:hover i,
   .s-btn-b:hover i,
   .s-btn-c:hover i,
-  .m-gotop:hover i {
+  .m-gotop:hover i,
+  .card.authority .btn:hover i,
+  .pay-charts-tip .hd .btn:hover i,
+  .chart-group .chart.pay-chart .pay-chart-btn span:hover i,
+  .micro-analysis .search-wrapper span:hover i {
     color: var(--c-white) !important;
   }
   .W_gotop:hover::after,
@@ -328,14 +364,22 @@
   .s-btn-a:hover::after,
   .s-btn-b:hover::after,
   .s-btn-c:hover::after,
-  .m-gotop:hover::after {
+  .m-gotop:hover::after,
+  .card.authority .btn:hover::after,
+  .pay-charts-tip .hd .btn:hover::after,
+  .chart-group .chart.pay-chart .pay-chart-btn span:hover::after,
+  .micro-analysis .search-wrapper span:hover::after {
     transform: translateX(100%);
   }
   .W_layer .send_weibo .W_btn_a_disable,
   .W_btn_a_disable,
   .W_btn_b,
   .private_dialogue_box .private_dialogue_body .msg_bubble_list .W_btn_b,
-  .artical_add_box .btn_line a {
+  .artical_add_box .btn_line a,
+  .chart-group .chart .c-hd .c-jump,
+  .download .export span,
+  .pay-charts-tip .hd .btn.preview,
+  .v-home-root .data-card .filter-wrapper .form-item .form-data .search {
     border: 1px solid var(--c-border) !important;
     background-color: var(--c-background) !important;
     color: var(--c-title) !important;
@@ -346,21 +390,33 @@
   .W_btn_a_disable span,
   .W_btn_b span,
   .private_dialogue_box .private_dialogue_body .msg_bubble_list .W_btn_b span,
-  .artical_add_box .btn_line a span {
+  .artical_add_box .btn_line a span,
+  .chart-group .chart .c-hd .c-jump span,
+  .download .export span span,
+  .pay-charts-tip .hd .btn.preview span,
+  .v-home-root .data-card .filter-wrapper .form-item .form-data .search span {
     color: var(--c-text) !important;
   }
   .W_layer .send_weibo .W_btn_a_disable::after,
   .W_btn_a_disable::after,
   .W_btn_b::after,
   .private_dialogue_box .private_dialogue_body .msg_bubble_list .W_btn_b::after,
-  .artical_add_box .btn_line a::after {
+  .artical_add_box .btn_line a::after,
+  .chart-group .chart .c-hd .c-jump::after,
+  .download .export span::after,
+  .pay-charts-tip .hd .btn.preview::after,
+  .v-home-root .data-card .filter-wrapper .form-item .form-data .search::after {
     content: none !important;
   }
   .W_layer .send_weibo .W_btn_a_disable:hover,
   .W_btn_a_disable:hover,
   .W_btn_b:hover,
   .private_dialogue_box .private_dialogue_body .msg_bubble_list .W_btn_b:hover,
-  .artical_add_box .btn_line a:hover {
+  .artical_add_box .btn_line a:hover,
+  .chart-group .chart .c-hd .c-jump:hover,
+  .download .export span:hover,
+  .pay-charts-tip .hd .btn.preview:hover,
+  .v-home-root .data-card .filter-wrapper .form-item .form-data .search:hover {
     border-color: var(--c-accent) !important;
     background-color: var(--c-hover) !important;
     color: var(--c-text) !important;
@@ -369,7 +425,11 @@
   .W_btn_a_disable:hover span,
   .W_btn_b:hover span,
   .private_dialogue_box .private_dialogue_body .msg_bubble_list .W_btn_b:hover span,
-  .artical_add_box .btn_line a:hover span {
+  .artical_add_box .btn_line a:hover span,
+  .chart-group .chart .c-hd .c-jump:hover span,
+  .download .export span:hover span,
+  .pay-charts-tip .hd .btn.preview:hover span,
+  .v-home-root .data-card .filter-wrapper .form-item .form-data .search:hover span {
     color: var(--c-text) !important;
   }
   .layer_menu_list,
@@ -469,16 +529,31 @@
   .W_tips.tips_rederror {
     background-color: var(--c-hover);
   }
+  .WB_h5video_v2 .wbv-load-progress,
+  .WB_h5video_v2 .wbv-volume-bar {
+    background-color: var(--c-border);
+  }
   .S_bg3,
-  .WB_feed_v3 .WB_feed_repeat .repeat_list .list_box_in .between_line {
+  .WB_feed_v3 .WB_feed_repeat .repeat_list .list_box_in .between_line,
+  .WB_h5video_v2 .wbv-progress-holder:before {
     background-color: transparent;
+  }
+  .WB_h5video_v2 .wbv-play-progress,
+  .WB_h5video_v2 .wbv-speed-button:hover:before,
+  .WB_h5video_v2 .wbv-quality-button:hover:before,
+  .WB_h5video_v2 .wbv-volume-handle {
+    background-color: var(--c-accent);
   }
   .tab_feed_a .tab .W_ficon {
     color: var(--c-title) !important;
   }
   .W_btn_b .ficon_add,
   .artwork_box .tag_showpicL .inner .txt,
-  .layer_view_morepic .box_li .W_autocut {
+  .layer_view_morepic .box_li .W_autocut,
+  .WB_h5video_v2 .wbv-time-control div,
+  .WB_h5video_v2 .wbv-pop-layer h4 span,
+  .WB_h5video_v2 .wbv-control.wbv-speed-button:hover:before,
+  .WB_h5video_v2 .wbv-control.wbv-quality-button:hover:before {
     color: var(--c-white) !important;
   }
   .WB_text a[render='ext'],
@@ -489,7 +564,9 @@
   a.current .S_ficon,
   a:hover em,
   .tab_feed_a li .curr,
-  .WB_text a[title] {
+  .WB_text a[title],
+  .WB_h5video_v2 .wbv-big-play-button:hover,
+  .WB_h5video_v2 .wbv-control:hover:before {
     color: var(--c-accent) !important;
   }
   .S_line1,
@@ -599,6 +676,10 @@
   .WB_feed_v3 .WB_media_a_m1 .WB_pic {
     max-width: 300px;
   }
+  .WB_feed_v3 .WB_media_a_m1 li.WB_video,
+  .WB_feed_v3 .WB_media_a_m1 li.WB_video_a {
+    width: 500px;
+  }
   .WB_feed_v3 .WB_media_a_m1 .WB_video,
   .WB_feed_v3 .WB_media_a_m1 .WB_video_a {
     display: block !important;
@@ -632,6 +713,9 @@
   .W_pages_minibtn em,
   .WB_tab_a .tab .b {
     display: none !important;
+  }
+  .feed_pop_search.S_bg2 {
+    background-color: var(--c-background);
   }
   .WB_left_nav .lev a:hover,
   .WB_left_nav .lev_curr,
@@ -677,7 +761,8 @@
   .W_person_info .cover {
     background-image: none !important;
   }
-  .W_layer .S_ficon {
+  .W_layer .S_ficon,
+  .pc_caldr .days li a strong {
     color: var(--c-title) !important;
   }
   .W_layer .W_btn_b_disable .S_ficon,
@@ -685,9 +770,6 @@
   .pc_caldr .selector .year,
   .send_weibo .set_timer .sel_time {
     color: var(--c-text) !important;
-  }
-  .pc_caldr .days li a strong {
-    color: var(--c-white) !important;
   }
   .laMed_mulist_v2 .li_inner:hover span,
   .layer_send_music .W_pages_minibtn .S_txt1,
@@ -734,13 +816,15 @@
   }
   .WB_left_nav .lev a,
   .W_input,
-  .unlogin_left_nav .lev {
+  .unlogin_left_nav .lev,
+  .feed_pop_search {
     border-radius: 4px;
   }
   .WB_tab_a,
   .WB_tab_a .tab li.S_bg2,
   .WB_tab_a .tab li.curr .b .b1 em i,
-  .WB_tab_a .tab_box .fr_box {
+  .WB_tab_a .tab_box .fr_box,
+  .W_input {
     box-shadow: none;
   }
   .WB_left_nav .lev .W_new_count {
@@ -852,13 +936,16 @@
   .PCD_photo_album_v2 {
     background-color: var(--c-background);
   }
-  .send_weibo_simple_fold .input_simple {
+  .send_weibo_simple_fold .input_simple,
+  .PCD_admin_leftnav .current .ln_title,
+  .PCD_admin_leftnav .item_li .ln_title:hover {
     background-color: var(--c-hover);
   }
   .PCD_person_info .bars_box .bar_box {
     background-color: var(--c-border);
   }
-  .PCD_pictext_f .pic_list_B .pt_ul .info_box {
+  .PCD_pictext_f .pic_list_B .pt_ul .info_box,
+  .PCD_admin_leftnav {
     background-color: transparent;
   }
   .WB_timeline .current em,
@@ -883,37 +970,62 @@
   .PCD_tab .tb_tab .current .tab_link .t_link,
   .WB_tab_a .tab_box_c .tab_li:hover .ani_border,
   .WB_tab_a .tab_box_c .curr a,
-  .WB_tab_b .inner .tab_ul .tab_cur .S_txt1 {
+  .WB_tab_b .inner .tab_ul .tab_cur .S_txt1,
+  .PCD_admin_leftnav .current .ln_title .nav_title {
     color: var(--c-accent) !important;
   }
-  .PCD_photo_album_v2 .mid_line {
+  .PCD_photo_album_v2 .mid_line,
+  .S_line3,
+  .W_input,
+  .send_weibo .input,
+  .W_btn_b:hover {
     border-color: var(--c-border);
   }
-  .WB_tab_b .inner .tab_ul .tab_cur .ani_border {
+  .WB_tab_b .inner .tab_ul .tab_cur .ani_border,
+  .W_btn_prev:hover,
+  .W_btn_next:hover {
     border-color: var(--c-accent);
   }
   .WB_tab_a .tab_box_c .tab .curr a,
   .WB_tab_b .inner {
     border: 0;
   }
-  .PCD_photo_album_v2 {
+  .PCD_photo_album_v2,
+  .PCD_admin_leftnav .item_li .ln_title:hover {
     border-radius: 4px;
   }
   .PCD_tab,
   .WB_tab_a .tab_box_c,
-  .WB_tab_b {
+  .WB_tab_b,
+  .PCD_admin_leftnav {
     box-shadow: none;
   }
-  .WB_frame_a {
+  .W_btn_b_disable,
+  .W_btn_b_disable .S_ficon {
+    opacity: 0.5;
+  }
+  .WB_frame #plc_main .PCD_admin_leftnav {
+    text-align: center;
+  }
+  .WB_frame_a,
+  .PCD_admin_content {
     margin: 0;
+  }
+  .PCD_admin_content {
+    padding: 0;
   }
   .WB_frame_a,
   .WB_frame_a_fix,
-  .B_page .WB_frame #plc_main {
+  .B_page .WB_frame #plc_main,
+  .PCD_photolist .WB_innerwrap ul,
+  .PCD_photolist .WB_innerwrap .p1 {
     width: 100%;
   }
   #Pl_Official_ProfileFeedNav__19 > div {
     width: 900px !important;
+  }
+  .PCD_admin_content {
+    width: 1000px;
   }
   .send_weibo_simple .input_simple_wrap .inputfunc_simple_wrap {
     width: 800px;
@@ -939,6 +1051,87 @@
   }
   .WB_timeline .S {
     border-left-color: var(--c-accent);
+  }
+}
+@-moz-document url-prefix("https://dss.sc.weibo.com/"), url-prefix("//e.weibo.com/v1/public/"), url-prefix("https://shop.sc.weibo.com/"), url-prefix("https://event.sc.weibo.com/"), url-prefix("https://pay.sc.weibo.com/"), url-pixfix("https://wyq.sina.com/") {
+  body,
+  .card,
+  .chart-group .chart .c-hd,
+  .card.authority,
+  .calendar .opts ul,
+  .dropdown-list .dropdown-hd,
+  .c-footer-root,
+  .c-navigation-root {
+    background-color: transparent !important;
+  }
+  .calendar .opts ul li.on,
+  .micro-analysis .search-wrapper input,
+  .v-home-root .data-card .filter-wrapper .form-item .form-data .number,
+  .c-table-root th {
+    background-color: var(--c-hover);
+  }
+  .card.nav .main-nav li span.on:after,
+  .calendar .opts ul li.on:after {
+    background-color: var(--c-accent);
+  }
+  html {
+    background-image: none !important;
+  }
+  .card.nav li span.on,
+  .card.nav li span:hover,
+  .calendar .opts ul li.on,
+  .c-navigator-root .nav.active {
+    color: var(--c-accent) !important;
+  }
+  .lastday ul li,
+  .chart .c-bd.overview-group .sub-overview-chart:nth-child(2n):before,
+  .chart .c-bd.overview-group .sub-overview-chart:nth-child(2n):after,
+  .calendar .opts ul,
+  .calendar .opts ul li,
+  .chart-group .chart .c-bd .legend-chart .chart-legend,
+  .pay-charts-tip .hd,
+  .video-list .load-more,
+  .video-list .load-more span:first-child,
+  .micro-analysis .search-wrapper input,
+  .c-navigation-root .userinfo-wrapper,
+  .v-home-root .data-card .filter-wrapper .form-item .form-data .date-picker,
+  .v-home-root .data-card .filter-wrapper .form-item .form-data .number,
+  .v-home-root .data-card .page-wrapper {
+    border-color: var(--c-border);
+  }
+  .c-navigator-root .nav.active {
+    border-color: var(--c-accent);
+  }
+  .chart-group .chart .c-bd .ft span:hover:after {
+    border-bottom-color: var(--c-accent);
+    border-right-color: var(--c-accent);
+  }
+  .chart-group .chart .c-bd,
+  .chart-group .chart .c-bd .ft,
+  .lastday ul.row-2 li:last-child,
+  .card ul.sub-nav,
+  .c-footer-root {
+    border: 0;
+  }
+  .c-footer-root {
+    box-shadow: none;
+  }
+  tspan {
+    fill: var(--c-text) !important;
+  }
+  .card.authority .btn,
+  .pay-charts-tip .hd .btn,
+  .micro-analysis .search-wrapper span {
+    position: absolute;
+  }
+  #root {
+    max-width: none;
+  }
+  .chart-group .chart,
+  .v-home-root .data-card {
+    border-radius: 4px;
+    box-shadow: none;
+    background-color: var(--c-background);
   }
 }
 @-moz-document url-prefix("https://weibo.com/ttarticle/") {
