--- a/weibo-lite/src/home/base.styl
+++ b/weibo-lite/src/home/base.styl
@@ -27,6 +27,9 @@ fieldset
 .WB_tab_a .tab .b
 	display none !important
 
+.feed_pop_search.S_bg2
+	background-color var(--c-background)
+
 .WB_left_nav .lev a:hover
 .WB_left_nav .lev_curr
 .WB_left_nav .lev_curr:hover
@@ -72,6 +75,7 @@ fieldset
 	background-image none !important
 
 .W_layer .S_ficon
+.pc_caldr .days li a strong
 	color var(--c-title) !important
 
 .W_layer .W_btn_b_disable .S_ficon
@@ -79,9 +83,6 @@ fieldset
 .pc_caldr .selector .year
 .send_weibo .set_timer .sel_time
 	color var(--c-text) !important
-
-.pc_caldr .days li a strong
-	color var(--c-white) !important
 
 .laMed_mulist_v2 .li_inner:hover span
 .layer_send_music .W_pages_minibtn .S_txt1
@@ -130,12 +131,14 @@ fieldset
 .WB_left_nav .lev a
 .W_input
 .unlogin_left_nav .lev
+.feed_pop_search
 	border-radius 4px
 
 .WB_tab_a
 .WB_tab_a .tab li.S_bg2
 .WB_tab_a .tab li.curr .b .b1 em i
 .WB_tab_a .tab_box .fr_box
+.W_input
 	box-shadow none
 
 .WB_left_nav .lev .W_new_count
