--- a/weibo-lite/src/home/user.styl
+++ b/weibo-lite/src/home/user.styl
@@ -10,12 +10,15 @@
   background-color var(--c-background)
 
 .send_weibo_simple_fold .input_simple
+.PCD_admin_leftnav .current .ln_title
+.PCD_admin_leftnav .item_li .ln_title:hover
   background-color var(--c-hover)
 
 .PCD_person_info .bars_box .bar_box
   background-color var(--c-border)
 
 .PCD_pictext_f .pic_list_B .pt_ul .info_box
+.PCD_admin_leftnav
   background-color transparent
 
 .WB_timeline .current em
@@ -41,12 +44,19 @@
 .WB_tab_a .tab_box_c .tab_li:hover .ani_border
 .WB_tab_a .tab_box_c .curr a
 .WB_tab_b .inner .tab_ul .tab_cur .S_txt1
+.PCD_admin_leftnav .current .ln_title .nav_title
   color var(--c-accent) !important
 
 .PCD_photo_album_v2 .mid_line
+.S_line3
+.W_input
+.send_weibo .input
+.W_btn_b:hover
   border-color var(--c-border)
 
 .WB_tab_b .inner .tab_ul .tab_cur .ani_border
+.W_btn_prev:hover
+.W_btn_next:hover
   border-color var(--c-accent)
 
 .WB_tab_a .tab_box_c .tab .curr a
@@ -54,23 +64,41 @@
   border 0
 
 .PCD_photo_album_v2
+.PCD_admin_leftnav .item_li .ln_title:hover
   border-radius 4px
 
 .PCD_tab
 .WB_tab_a .tab_box_c
 .WB_tab_b
+.PCD_admin_leftnav
   box-shadow none
 
+.W_btn_b_disable
+.W_btn_b_disable .S_ficon
+  opacity 0.5
+
+.WB_frame #plc_main .PCD_admin_leftnav
+  text-align center
+
 .WB_frame_a
+.PCD_admin_content
   margin 0
+
+.PCD_admin_content
+  padding 0
 
 .WB_frame_a
 .WB_frame_a_fix
 .B_page .WB_frame #plc_main
+.PCD_photolist .WB_innerwrap ul
+.PCD_photolist .WB_innerwrap .p1
   width 100%
 
 #Pl_Official_ProfileFeedNav__19 > div
   width 900px !important
+
+.PCD_admin_content
+  width 1000px
 
 .send_weibo_simple .input_simple_wrap .inputfunc_simple_wrap
   width 800px
