--- a/weibo-lite/src/public/feed.styl
+++ b/weibo-lite/src/public/feed.styl
@@ -30,9 +30,20 @@
 .W_tips.tips_rederror
   background-color var(--c-hover)
 
+.WB_h5video_v2 .wbv-load-progress
+.WB_h5video_v2 .wbv-volume-bar
+  background-color var(--c-border)
+
 .S_bg3
 .WB_feed_v3 .WB_feed_repeat .repeat_list .list_box_in .between_line
+.WB_h5video_v2 .wbv-progress-holder:before
   background-color transparent
+
+.WB_h5video_v2 .wbv-play-progress
+.WB_h5video_v2 .wbv-speed-button:hover:before
+.WB_h5video_v2 .wbv-quality-button:hover:before
+.WB_h5video_v2 .wbv-volume-handle
+  background-color var(--c-accent)
 
 .tab_feed_a .tab .W_ficon
   color var(--c-title) !important
@@ -40,6 +51,10 @@
 .W_btn_b .ficon_add
 .artwork_box .tag_showpicL .inner .txt
 .layer_view_morepic .box_li .W_autocut
+.WB_h5video_v2 .wbv-time-control div
+.WB_h5video_v2 .wbv-pop-layer h4 span
+.WB_h5video_v2 .wbv-control.wbv-speed-button:hover:before
+.WB_h5video_v2 .wbv-control.wbv-quality-button:hover:before
   color var(--c-white) !important
 
 .WB_text a[render='ext']
@@ -51,6 +66,8 @@ a.current .S_ficon
 a:hover em
 .tab_feed_a li .curr
 .WB_text a[title]
+.WB_h5video_v2 .wbv-big-play-button:hover
+.WB_h5video_v2 .wbv-control:hover:before
   color var(--c-accent) !important
 
 .S_line1
@@ -161,6 +178,10 @@ a em
 .WB_feed_v3 .WB_media_a_m1 .li_n_mix_h
 .WB_feed_v3 .WB_media_a_m1 .WB_pic
   max-width 300px
+
+.WB_feed_v3 .WB_media_a_m1 li.WB_video
+.WB_feed_v3 .WB_media_a_m1 li.WB_video_a
+  width 500px
 
 .WB_feed_v3 .WB_media_a_m1 .WB_video
 .WB_feed_v3 .WB_media_a_m1 .WB_video_a
