--- a/weibo-lite/src/public/button.styl
+++ b/weibo-lite/src/public/button.styl
@@ -9,6 +9,10 @@
 .s-btn-b
 .s-btn-c
 .m-gotop
+.card.authority .btn
+.pay-charts-tip .hd .btn
+.chart-group .chart.pay-chart .pay-chart-btn span
+.micro-analysis .search-wrapper span
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -51,6 +55,10 @@
 .W_btn_b
 .private_dialogue_box .private_dialogue_body .msg_bubble_list .W_btn_b
 .artical_add_box .btn_line a
+.chart-group .chart .c-hd .c-jump
+.download .export span
+.pay-charts-tip .hd .btn.preview
+.v-home-root .data-card .filter-wrapper .form-item .form-data .search
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
