--- a/weibo-lite/src/home/base.styl
+++ b/weibo-lite/src/home/base.styl
@@ -6,6 +6,7 @@
 #v6_pl_rightmod_hongbao
 #v6_pl_rightmod_rank
 #v6_pl_rightmod_recominfo
+#v6_pl_rightmod_ads35
 #v6_pl_rightmod_ads36
 #v6_pl_rightmod_attfeed
 #v6_trustPagelet_recom_member
@@ -15,6 +16,7 @@
 #v6_pl_rightmod_feedback
 #v6_pl_rightmod_likeprofile
 #v6_pl_rightmod_feedback
+#v6_pl_rightmod_helpcomment
 #v6_pl_ad_bigday
 #v6_pl_ad_forfqy
 #plc_bot .WB_footer
@@ -119,6 +121,13 @@ fieldset
 .feed_pop_tag .WB_tab_b .inner .tab_ul .tab_cur .ani_border
 .feed_pop_tag .WB_tab_b .inner .tab_ul .tab_item .ani_border
 	border-color var(--c-accent) !important
+
+
+.W_btn_tag:hover .W_arrow_bor_l em
+	border-color transparent var(--c-hover) transparent transparent !important
+
+.W_btn_tag:hover .W_arrow_bor .S_line3
+	border-color transparent var(--c-accent) transparent transparent !important
 
 .unlogin_left_nav .lev_layer
 	border 1px solid var(--c-border)
