--- a/weibo-lite/src/message/base.styl
+++ b/weibo-lite/src/message/base.styl
@@ -56,7 +56,7 @@
 #v6_pl_content_commentlist
 #v6_pl_content_likelist
 #v6_pl_content_submessageList
-  width 635px
+  width auto
 
 .private_dialogue_box .private_dialogue_body .cont .W_btn_c
   border 0
