--- a/weibo-lite/src/setting/base.styl
+++ b/weibo-lite/src/setting/base.styl
@@ -36,6 +36,7 @@ a.W_gotop:hover
 .W_btn_b:hover span
 .W_btn_d:hover span
 .W_btn_arrow
+.WB_left_nav a.lev_curr, .WB_left_nav a.lev_curr:hover
   background-image none !important
 
 .group_read .title
