--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -202,6 +202,7 @@ textarea
 .el-dropdown-menu
 .action-menu .menu-list
 .sub-nav-m .tips
+.comment-bilibili-con
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
