--- a/bilibili-lite/src/public/feed.styl
+++ b/bilibili-lite/src/public/feed.styl
@@ -17,6 +17,9 @@
 .feed-tag .core-style
   background-color var(--c-hover) !important
 
+.like-users-panel::before
+  background-color var(--c-border) !important
+
 .video-container .text-area .title
 .feed-tag .separater-line
 .title-text
