--- a/bilibili-lite/src/space/home.styl
+++ b/bilibili-lite/src/space/home.styl
@@ -42,6 +42,9 @@
 .follow-dialog-wrap .follow-dialog-window .content .group-list .empty-tip
   color var(--c-text) !important
 
+#page-index .fav-count
+  color var(--c-white) !important
+
 .be-tab-item.is-active span
 .list-create:hover .text
   color var(--c-accent) !important
@@ -84,6 +87,7 @@
   background-color var(--c-background)
 
 #pin-wrapper .pin-layer-vlist .small-item:hover
+#page-index .fav-count
   background-color var(--c-hover)
 
 .n .n-cursor
@@ -155,6 +159,9 @@ input[type=text]:focus
 
 .g-search
   width 300px
+
+#page-index .bangumi .large-item
+  width 400px
 
 .g-search input
   width 300px
