--- a/bilibili-lite/src/v/base.styl
+++ b/bilibili-lite/src/v/base.styl
@@ -210,7 +210,7 @@
 .audio-list .song-list
 .promote-m .storey-box
 .hot-recom-module .block-body
-.new-stat-module 
+.new-stat-module .storey-box
 .video-floor-infomation-m .storey-box .storey-content
 .special-recom-module .block-body ul
 .area-module .video-list-video
