--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -62,6 +62,7 @@
 .bilibili-player-context-menu-container.black ul>li a
 .bilibili-player-context-menu-container.black ul>li a span
 .bilibili-player-video-control-bottom-center .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-danmaku-input
+.bilibili-player-video-wrap div:not(.bilibili-danmaku)
 	color var(--c-white) !important
 
 .video-info .video-title .tit
@@ -100,7 +101,7 @@ ul.star-wrapper li i
 
 .bilibili-player-ending-panel-box-functions .bilibili-player-upinfo-spans .display>div.active
 .bilibili-player .bilibili-player-area .bilibili-player-video-control .bilibili-player-video-btn .bilibili-player-video-quality-menu .bilibili-player-bigvip
-	color: var(--c-white) !important
+	color var(--c-white) !important
 
 .coin-operated-m .coin-title span
 .coin-operated-m .mc-box.on .c-num
@@ -135,6 +136,9 @@ ul.star-wrapper li i.icon-star-full
 .bilibili-player-feedback
 .bilibili-player-feedback-title
 	border-color var(--c-border) !important
+
+.bilibili-player .bilibili-player-video-control .bilibili-player-video-btn-menu-list.bilibili-player-active:before
+	border-color transparent transparent transparent var(--c-accent)
 
 #bofqi.mini-player .drag-bar
 #bofqi.mini-player:before
