--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -238,6 +238,7 @@ button
 .container .musician-recommend .recommend-item .recommend-info .listen-btn
 .follow-container .follow-right .unfollow-btn
 .wide-members .avatar-list i
+.is-web .submit-button.disabled
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
