--- a/weibo-lite/index.user.css
+++ b/weibo-lite/index.user.css
@@ -1061,7 +1061,7 @@
     border-left-color: var(--c-accent);
   }
 }
-@-moz-document url-prefix("https://dss.sc.weibo.com/"), url-prefix("//e.weibo.com/v1/public/"), url-prefix("https://shop.sc.weibo.com/"), url-prefix("https://event.sc.weibo.com/"), url-prefix("https://pay.sc.weibo.com/"), url-pixfix("https://wyq.sina.com/") {
+@-moz-document url-prefix("https://dss.sc.weibo.com/"), url-prefix("https://e.weibo.com/v1/public/"), url-prefix("https://shop.sc.weibo.com/"), url-prefix("https://event.sc.weibo.com/"), url-prefix("https://pay.sc.weibo.com/") {
   body,
   .card,
   .chart-group .chart .c-hd,
