--- a/weibo-lite/src/home/index.styl
+++ b/weibo-lite/src/home/index.styl
@@ -4,11 +4,10 @@
 	@import 'user'
 }
 @-moz-document url-prefix("https://dss.sc.weibo.com/"),
-url-prefix("//e.weibo.com/v1/public/"),
+url-prefix("https://e.weibo.com/v1/public/"),
 url-prefix("https://shop.sc.weibo.com/"),
 url-prefix("https://event.sc.weibo.com/"),
-url-prefix("https://pay.sc.weibo.com/"),
-url-pixfix("https://wyq.sina.com/") {
+url-prefix("https://pay.sc.weibo.com/") {
 	// 管理中心样式
 	@import 'manage'
 }
